@startuml Core_Infrastructure
scale 0.8
skinparam backgroundColor white
skinparam classBackgroundColor #f8f9fa
skinparam classBorderColor #6c757d
skinparam classFontColor #212529
skinparam interfaceFontColor #212529
skinparam noteFontColor #212529
skinparam packageTitleColor #495057
skinparam packageTitleFontColor #495057
skinparam defaultFontColor #212529
skinparam ArrowColor #007bff
skinparam shadowing true
skinparam linetype ortho

title Core Infrastructure - Bot Framework

' Clases externas JDA
class JDA {
  +connect()
  +shutdown()
  +addEventListener()
}

package bot.core {
  class Main {
    +main(String[] args)
  }
  
  class BotApplication {
    +run(String[] args)
  }
  
  class Bot {
    -jda: JDA
    -commandRegistry: CommandRegistry
    -eventRegistry: EventRegistry
    -moduleManager: ModuleManager
    -serviceFactory: ServiceFactory
    +start()
    +shutdown()
    +registerCommand()
    +registerEvent()
  }
  
  class CommandRegistry {
    -commands: Map<String, Command>
    +register(Command command)
    +getCommand(String name): Command
    +getAllCommands(): List<Command>
  }
  
  class EventRegistry {
    -listeners: List<EventListener>
    +register(EventListener listener)
    +unregister(EventListener listener)
  }
  
  class JDABuilder {
    +createJDA(String token): JDA
    +configureIntents()
    +addEventListeners()
  }
  
  class ServiceFactory {
    +getConfigService(): ConfigService
    +getDatabaseManager(): DatabaseManager
    +getUserService(): UserService
    +getModerationService(): ModerationService
    +createInstance(Class<?> clazz): Object
  }
}

' Relaciones principales
Main --> BotApplication
BotApplication --> Bot
Bot *-- CommandRegistry : composición
Bot *-- EventRegistry : composición
Bot o-- ServiceFactory : agregación
Bot o-- JDABuilder : agregación
Bot --> JDA
JDABuilder --> JDA : creates

@enduml
